--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,2 @@
-/.bash_history
-/.bash_logout
-/.bashrc
-/.cache
-/.dagster
-/.dotnet
-/.gitconfig
-/.lesshst
-/.local
-/.npm
-/.profile
-/.python_history
-/.ssh
-/.sudo_as_admin_successful
-/.viminfo
-/.vscode
-/.vscode-server
-/.wget-hsts
-/grpc
-/maaz-devops
-/test
-/test.py
+**venv
+**__pycache__
